Updates for 1.17